--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
 	"require-dev": {
 		"friendsofphp/php-cs-fixer": "3.89.2",
 		"phpunit/phpunit": "^9.6",
-		"phpdocumentor/phpdocumentor": "^3.9"
+		"phpdocumentor/phpdocumentor": "^3.9",
+		"league/oauth2-client": "^2.9"
 	},
 	"suggest": {
 		"guzzlehttp/guzzle": "Allows for implementation of the Guzzle HTTP client"
