--- a/composer.json
+++ b/composer.json
@@ -30,16 +30,14 @@
 		"test": "phpunit"
 	},
 	"require": {
-		"php": "^5.6|^7.0|^8.0"
+		"php": "^5.6|^7.0|^8.0",
+		"ext-curl": "*"
 	},
 	"require-dev": {
 		"friendsofphp/php-cs-fixer": "3.89.2",
 		"phpunit/phpunit": "^9.6",
 		"phpdocumentor/phpdocumentor": "^3.9",
 		"league/oauth2-client": "^2.9"
-	},
-	"suggest": {
-		"guzzlehttp/guzzle": "Allows for implementation of the Guzzle HTTP client"
 	},
 	"autoload": {
 		"psr-4": {
