--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,11 @@
 	"description": "SumUp PHP SDK",
 	"type": "library",
 	"license": "Apache-2.0",
-	"version": "1.4.0",
+	"version": "0.0.0",
 	"keywords": [
 		"sumup",
 		"sdk",
-		"payment processing",
-		"ecommerce",
-		"payment",
+		"payments",
 		"checkout"
 	],
 	"homepage": "https://developer.sumup.com",
