--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,24 +1,24 @@
 {
 	"$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
-	"include-component-in-tag": false,
+	"release-type": "php",
+	"extra-files": [
+		"src/Version.php",
+		{
+			"type": "json",
+			"path": "composer.json",
+			"jsonpath": "$.version"
+		}
+	],
 	"include-v-in-tag": true,
+	"include-component-in-tag": false,
+	"versioning": "prerelease",
+	"prerelease": true,
+	"bump-minor-pre-major": true,
+	"bump-patch-for-minor-pre-major": true,
 	"pull-request-header": "Automated sumup-php SDK release",
 	"pull-request-title-pattern": "release: ${version}",
 	"extra-label": "release",
-	"draft": true,
-	"bump-minor-pre-major": true,
-	"bump-patch-for-minor-pre-major": true,
 	"packages": {
-		".": {
-			"release-type": "php",
-			"extra-files": [
-				"src/Version.php",
-				{
-					"type": "json",
-					"path": "composer.json",
-					"jsonpath": "$.version"
-				}
-			]
-		}
+		".": {}
 	}
 }
